--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
   icecast:
     image: infiniteproject/icecast
     env_file: ../netdj-configs/icecast-env
+    volumes:
+    - ../netdj-configs/icecast.xml:/etc/icecast.xml:ro
+    - ./silence.mp3:/usr/share/icecast/web/silence.mp3:ro
 
   bot:
     image: node
@@ -35,6 +38,7 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt:ro
     ports:
       - 80:80
+      - 443:443
     depends_on:
       - mopidy
       - icecast
