adjust to new bot and try to separate production and debug

--- a/bot-env.sample
+++ b/bot-env.sample
@@ -1,2 +1,5 @@
 SLACK_SIGNING_SECRET=REPLACE_ME
 SLACK_BOT_TOKEN=REPLACE_ME
+SLACK_BOT_CHANNEL=REPLACE_ME
+SLACK_BOT_PORT=8765
+SLACK_BOT_MOPIDY_HOST_PORT=mopidy:6680
