--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - ../playlists:/var/lib/mopidy/playlists:ro
       - ../netdj-configs/mopidy.conf:/config/mopidy.conf:ro
       - ./mopidy-entrypoint.sh:/entrypoint.sh:ro
+    restart: always
     depends_on:
       - icecast
 
